XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Bugfixes
~~~~~~~~
- Fixed string quotation and comment handling in Properties::fromString()
  (hinckel)

Features
~~~~~~~~
- Added XSLStringCallback::wordwrap() to wrap long texts at given column
  (hinckel, toennishoff)


Version 5.7.10, released 2010-07-04
-----------------------------------
SVN version: 14692

Heads up!
~~~~~~~~~
- Changed unittests with @expect to fail if the expected exception is 
  caught but a warning is raised
  (friebe, kiesel, ilankin)
- Changed URL to service mapping in web runners - a mapping on the URL 
  /service will no longer catch the URL /services (note the trailing "s"),
  while it will catch any of /service, /service/json or /service/ws/soap.
  http://news.xp-framework.net/article/355/2010/06/10/
  (friebe)

RFCs
~~~~
- Implemented RFC #0203 - Unbuffered queries
  (friebe)

Bugfixes
~~~~~~~~
- Fixed webservices.json.JsonDecoder not to convert integers on stream
  larger than LONG_MAX to LONG_MAX (or LONG_MIN, respectively)
  (friebe, treuter, robert)
- Fixed util.Date's constructor not to throw exceptions if a previous 
  call to it lead to an error in PHP versions before 5.2.6.
  (friebe, Gabriel Mihai Ghigea)
- Changed xml.XPath to throw an exception inside the constructor instead
  of later on when given invalid XML
  (friebe, ilankin)
- Fixed bug to always use forward slashes as directory separator in
  cgen's wsdl subcommand
  (kiesel)
- Changed HttpSession to regenerate session ID before starting a session
  in order to prevent duplicate session creation
  (friebe)
- Ports: Fixed protocol messup when reading messages without content length 
  from STOMP endpoints.
  (friebe)
- Removed unused member field xml.Tree::$dataSource
  (hinckel)

Features
~~~~~~~~
- webservices.rpc.AbstractRpcRouter now logs all exceptions transmitted