@@ -17,3 +17,6 @@ class="net.xp_framework.unittest.peer.http.HttpInputStreamTest"
 
 [connection]
 class="net.xp_framework.unittest.peer.http.HttpConnectionTest"
+
+[transport]
+class="net.xp_framework.unittest.peer.http.HttpTransportTest"
