@@ -20,10 +20,12 @@
      * Creates a socket - overridden from parent class
      *
      * @param   peer.URL url
+     * @param   string arg
      * @return  peer.Socket
      */
-    protected function newSocket(URL $url) {
-      return new SSLSocket($url->getHost(), $url->getPort(443));
+    protected function newSocket(URL $url, $arg) {
+      sscanf($arg, 'v%d', $version);
+      return new SSLSocket($url->getHost(), $url->getPort(443), NULL, $version);
     }
   }
 ?>
